<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".view.FirstActivity">

    <Button
        android:id="@+id/btn_en"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/roundedbutton"
        android:drawableStart="@drawable/usa"
        android:drawablePadding="5dp"
        android:gravity="center_vertical|start"
        android:paddingStart="15dp"
        android:text="@string/str_english"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_jp"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/roundedbutton"
        android:drawableStart="@drawable/japan"
        android:drawablePadding="5dp"
        android:gravity="center_vertical|start"
        android:paddingStart="15dp"
        android:text="@string/str_japan"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/btn_en"
        app:layout_constraintTop_toBottomOf="@+id/btn_en" />

    <Button
        android:id="@+id/btn_kr"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/roundedbutton"
        android:drawableStart="@drawable/korea"
        android:drawablePadding="5dp"
        android:gravity="center_vertical|start"
        android:paddingStart="15dp"
        android:text="@string/str_korea"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/btn_en"
        app:layout_constraintTop_toBottomOf="@+id/btn_jp" />

    <Button
        android:id="@+id/btn_ru"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/roundedbutton"
        android:drawableStart="@drawable/rus"
        android:drawablePadding="5dp"
        android:gravity="center_vertical|start"
        android:paddingStart="15dp"
        android:text="@string/str_russia"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/btn_en"
        app:layout_constraintTop_toBottomOf="@+id/btn_kr" />

    <Button
        android:id="@+id/btn_uz"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/roundedbutton"
        android:drawableStart="@drawable/uzb"
        android:drawablePadding="5dp"
        android:gravity="center_vertical|start"
        android:paddingStart="15dp"
        android:text="@string/str_uzbek"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/btn_en"
        app:layout_constraintTop_toBottomOf="@+id/btn_ru" />

    <Button
        android:id="@+id/btn_cn"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/roundedbutton"
        android:drawableStart="@drawable/china"
        android:drawablePadding="5dp"
        android:gravity="center_vertical|start"
        android:paddingStart="15dp"
        android:text="@string/str_china"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/btn_en"
        app:layout_constraintTop_toBottomOf="@+id/btn_uz" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingStart="24sp"
        android:paddingEnd="24sp"
        android:text="@string/reference_site_about_lorem_ipsum_giving_information_on_its_origins_as_well_as_a_random_lipsum_generator"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cn" />




</androidx.constraintlayout.widget.ConstraintLayout>